# Ensemble-RF-based-models

./: .gitignore  README.md  boosted_rf.ipynb  doc.ipynb  docs.md  example.ipynb  note.md  pyproject.toml
doc/notes/: RF on steroids.md  adaboost.md  ensemble learinng.md
doc/stage1/: .gitignore  uma-towienko-wzarzecki-etap1-23z.tex
experiments/: boosted.ipynb  iterative.ipynb  stacked.ipynb
src/: boosted_rf.py  evaluation.py  iterative_rf.py  iterative_rf_class_based.py  iterative_rf_sample_based.py  stacking_rf.py
